[15062023] Convert webp images

--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -179,7 +179,7 @@
         </div>
         <div class="row footer-middle">
             <div class="col-12 col-md-12 col-lg-12">
-                <img src="{{ absolute_url(convert_images.webpConvert2(asset('/assets/images/logo.png'), '')) }}" alt="{{ get_setting('siteName') }}" width="293" height="106" />
+                <img src="{{ asset(convert_images.webpConvert2(asset('/assets/images/logo.png'), '')) }}" alt="{{ get_setting('siteName') }}" width="293" height="106" />
                 <div class="footer-text-wrap  text-center">
                     <p>Xây Dựng Kim Anh : Công ty, nhà thầu xây dựng chuyên thi công xây dựng nhà phố, biệt thự, sửa chữa nhà uy tín và chất lượng tại Thành phố Hồ Chí Minh. Chúng tôi luôn mang đến sự hài lòng đến toàn thể quý khách hàng đã tin tưởng đến công ty. Công ty chúng tôi rất hân hạnh khi được làm việc với toàn thể quý khách hàng đã tin tưởng chúng tôi.</p>
                 </div>
