--- a/app/Resources/views/amp/amp-theme/related.html.twig
+++ b/app/Resources/views/amp/amp-theme/related.html.twig
@@ -5,6 +5,15 @@
                 <h3>{{ 'news.news_related'|trans }}</h3>
                 <div class="row">
                     {% for row in relatedNews %}
+                        {% set imagePath = (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) %}
+                        {% set imagePathFilter = (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_406_280') %}
+                                                
+                        {% if convert_images.fileExists(imagePath) == false %}
+                            {% set imagePath = imagePath | imagine_filter('news_406_280') %}
+                        {% else %}
+                            {% set imagePath = convert_images.webpConvert(imagePathFilter, '', true) %}
+                        {% endif %}
+
                         <div class="col-xs-12 col-sm-4 col-md-3">
                             <div class="related-wrapper">
                                 <div class="related-img">
@@ -12,7 +21,7 @@
                                         <a href="{{ path('news_show', {'slug': row.getUrl(), 'danh-muc': category.getUrl() }) }}" title="{{ row.getTitle() }}">
                                             <amp-img
                                                 alt="{{row.getTitle()}}"
-                                                src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_406_280') }}"
+                                                src="{{ imagePath != false ? asset(imagePath) : asset(imagePathFilter) }}"
                                                 width="406"
                                                 height="280"
                                                 layout="responsive"
@@ -23,7 +32,7 @@
                                         <a href="{{ path('news_show', {'slug': row.getUrl() }) }}" title="{{ row.getTitle() }}">
                                             <amp-img
                                                 alt="{{row.getTitle()}}"
-                                                src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_406_280') }}"
+                                                src="{{ imagePath != false ? asset(imagePath) : asset(imagePathFilter) }}"
                                                 width="406"
                                                 height="280"
                                                 layout="responsive"
@@ -114,6 +123,15 @@
             <h3>{{ 'news.news_related'|trans }}</h3>
             <div class="row">
                 {% for row in relatedNews %}
+                    {% set imagePath = (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) %}
+                    {% set imagePathFilter = (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_406_280') %}
+                                            
+                    {% if convert_images.fileExists(imagePath) == false %}
+                        {% set imagePath = imagePath | imagine_filter('news_406_280') %}
+                    {% else %}
+                        {% set imagePath = convert_images.webpConvert(imagePathFilter, '', true) %}
+                    {% endif %}
+
                     <div class="col-xs-12 col-sm-4 col-md-3">
                         <div class="related-wrapper">
                             <div class="related-img">
@@ -121,7 +139,7 @@
                                     <a href="{{ path('news_show', {'slug': row.getUrl(), 'danh-muc': category.getUrl() }) }}" title="{{ row.getTitle() }}">
                                         <amp-img
                                             alt="{{row.getTitle()}}"
-                                            src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_406_280') }}"
+                                            src="{{ imagePath != false ? asset(imagePath) : asset(imagePathFilter) }}"
                                             width="406"
                                             height="280"
                                             layout="responsive"
@@ -132,7 +150,7 @@
                                     <a href="{{ path('news_show', {'slug': row.getUrl() }) }}" title="{{ row.getTitle() }}">
                                         <amp-img
                                             alt="{{row.getTitle()}}"
-                                            src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_406_280') }}"
+                                            src="{{ imagePath != false ? asset(imagePath) : asset(imagePathFilter) }}"
                                             width="406"
                                             height="280"
                                             layout="responsive"
