--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -189,7 +189,7 @@
                         <div class="row">
                             <div class="col-md-12 title-list-news-items">
                                 <div class="text-center text-uppercase title-list-news-items-h1">
-                                    <img alt="{{ blockOnHomepage.category.getName() }}" src="{{ asset('assets/images/icon-logo.png') }}" width="35" height="23" />
+                                    <img alt="{{ blockOnHomepage.category.getName() }}" src="{{ asset(convert_images.webpConvert2(asset('/assets/images/icon-logo.png'), '')) }}" width="35" height="23" />
                                     <span>Kim </span> Anh <i class="fas fa-angle-right"></i> 
                                     {{ blockOnHomepage.category.getName() }}
                                 </div>
@@ -212,7 +212,7 @@
                         <div class="row project-hot">
                             <div class="col-md-12 title-list-news-items">
                                 <div class="text-center text-uppercase title-list-news-items-h1">
-                                    <img alt="{{ blockOnHomepage.category.getName() }}" src="{{ asset('assets/images/icon-logo.png') }}" width="35" height="23" />
+                                    <img alt="{{ blockOnHomepage.category.getName() }}" src="{{ asset(convert_images.webpConvert2(asset('/assets/images/icon-logo.png'), '')) }}" width="35" height="23" />
                                     <span>Kim </span> Anh <i class="fas fa-angle-right"></i> 
                                     {{ blockOnHomepage.category.getName() }}
                                 </div>
