--- a/app/Resources/views/news/listByCategory.html.twig
+++ b/app/Resources/views/news/listByCategory.html.twig
@@ -1,7 +1,7 @@
 <div class="row project-hot">
     <div class="col-md-12 title-list-news-items">
         <div class="text-center text-uppercase title-list-news-items-h1">
-            <img alt="Dự án nổi bật" src="{{ asset('assets/images/icon-logo.png') }}" />
+            <img alt="Dự án nổi bật" src="{{ asset(convert_images.webpConvert2(asset('/assets/images/icon-logo.png'), '')) }}" />
             <span>Kim </span> Anh <i class="fas fa-angle-right"></i> 
             Dự án nổi bật
         </div>
