--- a/app/Resources/views/news/show.html.twig
+++ b/app/Resources/views/news/show.html.twig
@@ -25,8 +25,9 @@
     <meta property="og:title" content="{{ post.getPageTitle() is not null ? post.getPageTitle() : post.getTitle() }}" />
     <meta property="og:description" content="{{ post.getPageDescription() is not null ? post.getPageDescription() : post.getDescription() }}" />
     <meta property="og:image" content="{{ imagePath != false ? absolute_url(imagePath) : absolute_url(imagePathFilter) }}" />
-    <meta property="og:image:width" content="{{ imageSize ? imageSize[0] : '800' }}" />
-    <meta property="og:image:height" content="{{ imageSize ? imageSize[1] : '420' }}" />
+    <meta property="og:image:alt" content="{{ post.getTitle() }}" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="420" />
 {% endblock %}
 
 {% block twitterImage %}
@@ -74,7 +75,7 @@
 
                 <article id="post-{{ post.getId() }}" class="news">
                     <h1 class="entry-title block-title">{{ post.getTitle() }}</h1>
-                    
+
                     <div class="news-container">
                         {{ contentsLazy|replace({'50I Trần Thị Bảy, KP 3, Phường Hiệp Thành, Quận 12, TP Hồ Chí Minh':'C40 - KDC Hiệp Thành - Nguyễn Thị Búp, Phường Hiệp Thành, Quận 12, TP Hồ Chí Minh'})|raw }}
                     </div>
@@ -85,7 +86,7 @@
                     {# Rating and Share #}
                     <div class="rating-share-container">
                         {{ include('news/rating/rating.html.twig') }}
-                        {{ include('news/components/share.html.twig') }}
+                        {# {{ include('news/components/share.html.twig') }} #}
                     </div>
 
                     {# Related news #}
