--- a/app/Resources/views/layout/header.html.twig
+++ b/app/Resources/views/layout/header.html.twig
@@ -43,7 +43,13 @@
                 <div class="col-md-4" id="logo_top">
                     <div id="logo">								
                         <a href="{{ path('homepage') }}" title="{{ get_setting('siteName') }}">
-                            <img alt="{{ get_setting('siteName') }}" src="{{ asset(convert_images.webpConvert2(asset('/assets/images/logo.png'), '')) }}" width="274" height="99">
+                            <img
+                                class="lazyload"
+                                alt="{{ get_setting('siteName') }}"
+                                src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                                data-src="{{ asset(convert_images.webpConvert2(asset('/assets/images/logo.png'), '')) }}"
+                                width="274"
+                                height="99">
                         </a>
                     </div>
                 </div>
