--- a/app/Resources/views/contact/index.html.twig
+++ b/app/Resources/views/contact/index.html.twig
@@ -36,7 +36,7 @@
                         </li>
                         <li>
                             <i class="fa fa-phone"></i>
-                            <span><strong>0974 776 305 – 088.609.4455 – 0987 244 305 - A Tuấn</strong></span>
+                            <span><strong>0974 776 305 – 0966 289 559 – 0987 244 305 - A Tuấn</strong></span>
                         </li>
                         <li>
                             <i class="fas fa-envelope"></i>
