--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -106,7 +106,7 @@
                                 <span><i class="fa fa-globe"></i></span>
                             </div>
                             <div class="media-body">
-                                <h2 class="media-heading text-uppercase">Báo giá miễn phí, tận nơi</h2>
+                                <b class="media-heading text-uppercase">Báo giá miễn phí, tận nơi</b>
                                 <div class="marketing-container">
                                     <p>Báo giá xây dựng nhà phố, biệt thự, sửa chữa nhà miễn phí, nhanh chóng, tận nơi, làm việc 24/7</p>
                                 </div>
@@ -119,7 +119,7 @@
                                 <span><i class="fa fa-balance-scale"></i></span>
                             </div>
                             <div class="media-body">
-                                <h2 class="media-heading text-uppercase">Giá cả hợp lý, cạnh tranh</h2>
+                                <b class="media-heading text-uppercase">Giá cả hợp lý, cạnh tranh</b>
                                 <div class="marketing-container">
                                     <p>Bảng báo giá xây dựng nhà, sửa chữa nhà của chúng tôi hợp lý, rõ ràng từng vấn đề, cạnh tranh</p>
                                 </div>
@@ -132,7 +132,7 @@
                                 <span><i class="fas fa-users"></i></span>
                             </div>
                             <div class="media-body">
-                                <h2 class="media-heading text-uppercase">Đội ngũ chuyên nghiệp</h2>
+                                <b class="media-heading text-uppercase">Đội ngũ chuyên nghiệp</b>
                                 <div class="marketing-container">
                                     <p>Bạn sẽ được làm việc cùng đội ngũ kiến trúc sư, kĩ sư, tổ thợ chuyên nghiệp, nhiều kinh nghiệm</p>
                                 </div>
@@ -145,7 +145,7 @@
                                 <span><i class="fas fa-gem"></i></span>
                             </div>
                             <div class="media-body">
-                                <h2 class="media-heading text-uppercase">Cam kết bảo hành</h2>
+                                <b class="media-heading text-uppercase">Cam kết bảo hành</b>
                                 <div class="marketing-container">
                                     <p>Chúng tôi luôn cam kết bảo hành công trình thi công lâu dài, đồng hành cùng quý khách hàng</p>
                                 </div>
@@ -158,7 +158,7 @@
                                 <span><i class="fas fa-lightbulb"></i></span>
                             </div>
                             <div class="media-body">
-                                <h2 class="media-heading text-uppercase">Sáng tạo trong thiết kế</h2>
+                                <b class="media-heading text-uppercase">Sáng tạo trong thiết kế</b>
                                 <div class="marketing-container">
                                     <p>Những kỹ sư thiết kế về kiến trúc và nội thất có kinh nghiệm sẽ đưa đến những ý tưởng sáng tạo cho ngôi nhà của bạn</p>
                                 </div>
@@ -171,7 +171,7 @@
                                 <span><i class="fa fa-bullhorn"></i></span>
                             </div>
                             <div class="media-body">
-                                <h2 class="media-heading text-uppercase">Không phát sinh phí</h2>
+                                <b class="media-heading text-uppercase">Không phát sinh phí</b>
                                 <div class="marketing-container">
                                     <p>Chúng tôi cam kết đến toàn thể quý khách hàng không phát sinh phí trong quá trình xây dựng</p>
                                 </div>
