--- a/web/assets/scss/front/pages/_homepage.scss
+++ b/web/assets/scss/front/pages/_homepage.scss
@@ -354,7 +354,7 @@
             }
     
             .media-body {
-                h2 {
+                b.media-heading {
                     font-size: 18px;
                     font-weight: 600;
                     margin-bottom: 8px;
