--- a/app/Resources/views/news/comments/list.html.twig
+++ b/app/Resources/views/news/comments/list.html.twig
@@ -23,7 +23,7 @@
                                     class="media-object lazyload">
                             </div>
                             <div class="media-body">
-                                <h5 class="mt-0">{{ comment.getAuthor() }}</h5>
+                                <b class="mt-0">{{ comment.getAuthor() }}</b>
                                 <div class="comment-container">{{ comment.getContent()|raw }}</div>
                                 <a class="comment-reply-link" id="comment-reply" href="#" data-post-id="{{ comment.getId() }}">{{ 'comment.reply'|trans }}</a>
                                 <ul class="media-list">
@@ -40,7 +40,7 @@
                                                     class="media-object lazyload">
                                             </div>
                                             <div class="media-body">
-                                                <h5 class="mt-0">{{ replyComment.getAuthor() is same as ('Webmaster') ? get_setting('displayNameCommentAs')|raw : replyComment.getAuthor() }}</h5>
+                                                <b class="mt-0">{{ replyComment.getAuthor() is same as ('Webmaster') ? get_setting('displayNameCommentAs')|raw : replyComment.getAuthor() }}</b>
                                                 <div class="comment-container">{{ replyComment.getContent()|raw }}</div>
                                             </div>
                                         </li>
@@ -61,7 +61,7 @@
                                     class="media-object lazyload">
                             </div>
                             <div class="media-body">
-                                <h5 class="mt-0">{{ comment.getAuthor() }}</h5>
+                                <b class="mt-0">{{ comment.getAuthor() }}</b>
                                 <div class="comment-container">{{ comment.getContent()|raw }}</div>
                                 <a class="comment-reply-link" id="comment-reply" href="#" data-post-id="{{ comment.getId() }}">{{ 'comment.reply'|trans }}</a>
                                 <ul class="media-list">
@@ -78,7 +78,7 @@
                                                     class="media-object lazyload">
                                             </div>
                                             <div class="media-body">
-                                                <h5 class="mt-0">{{ replyComment.getAuthor() is same as ('Webmaster') ? get_setting('displayNameCommentAs')|raw : replyComment.getAuthor() }}</h5>
+                                                <b class="mt-0">{{ replyComment.getAuthor() is same as ('Webmaster') ? get_setting('displayNameCommentAs')|raw : replyComment.getAuthor() }}</b>
                                                 <div class="comment-container">{{ replyComment.getContent()|raw }}</div>
                                             </div>
                                         </li>
