--- a/app/Resources/views/news/page.html.twig
+++ b/app/Resources/views/news/page.html.twig
@@ -32,7 +32,7 @@
                     <h1 class="entry-title block-title">{{ post.getTitle() }}</h1>
                     
                     <div class="news-container">
-                        {{ post.getContents()|replace({'50I Trần Thị Bảy, KP 3, Phường Hiệp Thành, Quận 12, TP Hồ Chí Minh':'C40 - KDC Hiệp Thành - Nguyễn Thị Búp, Phường Hiệp Thành, Quận 12, TP Hồ Chí Minh'})|raw }}
+                        {{ contentsLazy|replace({'50I Trần Thị Bảy, KP 3, Phường Hiệp Thành, Quận 12, TP Hồ Chí Minh':'C40 - KDC Hiệp Thành - Nguyễn Thị Búp, Phường Hiệp Thành, Quận 12, TP Hồ Chí Minh', '088.609.4455':'0966.289.559'})|raw }}
                     </div>
 
                     {# Rating and Share #}
