--- a/app/Resources/views/news/rating/rating.html.twig
+++ b/app/Resources/views/news/rating/rating.html.twig
@@ -1,6 +1,6 @@
 <div class="rating-container">
     {{ ratingValue|rating }}
-    <a href="form-rating-container" id="rating">
+    <a href="javascript:void(0)" id="rating">
         <div>
             {% if rating > 0 %}
                 <span>{{ rating }}</span> ({{ ratingPercent }}%) / <span>{{ ratingCount }}</span> votes
