--- a/web/assets/scss/front/new.scss
+++ b/web/assets/scss/front/new.scss
@@ -28,3 +28,13 @@
         }
     }
 }
+
+#sidebar {
+    .list-group {
+        h2 {
+            font-size: 16px;
+            font-weight: 500;
+            margin-bottom: 0;
+        }
+    }
+}
