--- a/web/assets/scss/front/new.scss
+++ b/web/assets/scss/front/new.scss
@@ -1,3 +1,5 @@
+@import "global/fonts";
+
 .news {
     .news-container {
         .iframe-containers {
@@ -36,5 +38,34 @@
             font-weight: 500;
             margin-bottom: 0;
         }
+    }
+}
+
+.list-news-items .news-item .news-item-wrapper .media-body h2 {
+    font-family: $robotoCondesed;
+    font-size: 19px;
+    font-weight: bold;
+    margin: 15px 0 10px 0;
+    min-height: 54px;
+
+    @media only screen and (max-width: 767.98px) {
+        min-height: auto;
+        margin-bottom: 10px;
+    }
+}
+
+.list-news-items .news-item .news-item-wrapper .media-body h2 a {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    line-height: 26px;
+    max-height: 60px;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    color: #0053a5;
+    text-align: center;
+
+    &:hover {
+        text-decoration: none;
     }
 }
